--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     
     <title>Gaming webiste</title>
     <link rel="stylesheet" href="assests/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -21,7 +23,7 @@
         <ul>
           <li><a href="#"><i class="fas fa-tv"></i> <span>Shows</span></a></li>
           <li><a href="#"><i class="fas fa-gamepad"></i> <span>Games</span></a></li>
-          <li><a href="#"><i class="fas fa-video"></i> <span>Videos</span></a></li>
+          <li><a href="index.html#videos-section"><i class="fas fa-video"></i> <span>Videos</span></a></li>
           <li><a href="#"><i class="fas fa-mobile-alt"></i> <span>Apps</span></a></li>
       </ul>
       </nav>
@@ -34,85 +36,68 @@
 
   <section class="main-content">
     <section class="featured-games">
-      <h2>Featured Games</h2>
       <div class="slider">
           <input type="radio" name="slide" id="slide1" checked>
           <input type="radio" name="slide" id="slide2">
           <input type="radio" name="slide" id="slide3">
-          <!-- Add more radio inputs as needed -->
-
+  
           <div class="slider-wrapper">
-              <!-- Game Card -->
-              <div class="slide">
-                  <div class="game-card">
-                      <img src="https://via.placeholder.com/300x200" alt="Game 1">
-                      <div class="game-info">
-                          <h3>Game Title 1</h3>
-                          <p>Short description of the game.</p>
-                      </div>
-                  </div>
+              <div class="game-card">
+                  <video class="gameplay" src="/assests/showcase/videos/gp-1.mp4" muted></video>
+                  <img src="/assests/showcase/pictures/p1.jpg" alt="Game 1">
+                  <!-- <div class="game-info">
+                      <h3>Black Myth Wukong</h3>
+                      <button class="play-now">Play Now</button>
+                  </div> -->
               </div>
-              <!-- Game Card -->
-              <div class="slide">
-                  <div class="game-card">
-                      <img src="https://via.placeholder.com/300x200" alt="Game 2">
-                      <div class="game-info">
-                          <h3>Game Title 2</h3>
-                          <p>Short description of the game.</p>
-                      </div>
-                  </div>
+              <div class="game-card">
+                  <video class="gameplay" src="/assests/showcase/videos/gp-2.mp4" muted></video>
+                  <img src="/assests/showcase/pictures/2.jpg" alt="Game 2">
+                  <!-- <div class="game-info">
+                      <h3>Valorant</h3>
+                      <button class="play-now">Play Now</button>
+                  </div> -->
               </div>
-              <!-- Game Card -->
-              <div class="slide">
-                  <div class="game-card">
-                      <img src="https://via.placeholder.com/300x200" alt="Game 3">
-                      <div class="game-info">
-                          <h3>Game Title 3</h3>
-                          <p>Short description of the game.</p>
-                      </div>
-                  </div>
-              </div>
-              <!-- Add more slides as needed -->
           </div>
-
-          <!-- Navigation -->
+  
           <div class="navigation">
               <label for="slide1" class="nav-button prev"><i class="fas fa-chevron-left"></i></label>
               <label for="slide2" class="nav-button"><i class="fas fa-chevron-right"></i></label>
           </div>
-      </section>
+      </div>
+  </section>
+  
 
     <div class="leaderboard">
         <h2><i class="fas fa-trophy"></i> Top Players</h2>
         <ul>
-            <li><i class="fas fa-medal icon"></i><span class="name">Player 1</span><span class="points">1000 pts</span></li>
-            <li><i class="fas fa-medal icon"></i><span class="name">Player 2</span><span class="points">900 pts</span></li>
-            <li><i class="fas fa-medal icon"></i><span class="name">Player 3</span><span class="points">800 pts</span></li>
-            <li><i class="fas fa-medal icon"></i><span class="name">Player 4</span><span class="points">700 pts</span></li>
-            <li><i class="fas fa-medal icon"></i><span class="name">Player 5</span><span class="points">600 pts</span></li>
+            <li><i class="fas fa-medal icon"></i><span class="name">Jivansh</span><span class="points">100000 pts</span></li>
+            <li><i class="fas fa-medal icon"></i><span class="name">Aryan</span><span class="points">99999 pts</span></li>
+            <li><i class="fas fa-medal icon"></i><span class="name">Jasleen</span><span class="points">89000 pts</span></li>
+            <li><i class="fas fa-medal icon"></i><span class="name">shreya</span><span class="points">69 pts</span></li>
+            <li><i class="fas fa-medal icon"></i><span class="name">ishika</span><span class="points">100 pts</span></li>
         </ul>
     </div>
   </section>
 
   <section class="character-carousel">
-    <h2>Game Characters</h2>
+    <!-- <h2>Game Characters</h2> -->
     <div class="carousel-wrapper">
       <div class="carousel">
-        <img src="https://via.placeholder.com/100x100" alt="Character 1">
-        <img src="https://via.placeholder.com/100x100" alt="Character 2">
-        <img src="https://via.placeholder.com/100x100" alt="Character 3">
-        <img src="https://via.placeholder.com/100x100" alt="Character 4">
-        <img src="https://via.placeholder.com/100x100" alt="Character 5">
-        <img src="https://via.placeholder.com/100x100" alt="Character 1">
-        <img src="https://via.placeholder.com/100x100" alt="Character 2">
-        <img src="https://via.placeholder.com/100x100" alt="Character 3">
-        <img src="https://via.placeholder.com/100x100" alt="Character 4">
-        <img src="https://via.placeholder.com/100x100" alt="Character 5">
-        <img src="https://via.placeholder.com/100x100" alt="Character 1">
-        <img src="https://via.placeholder.com/100x100" alt="Character 2">
-        <img src="https://via.placeholder.com/100x100" alt="Character 3">
-        <img src="https://via.placeholder.com/100x100" alt="Character 4">
-        <img src="https://via.placeholder.com/100x100" alt="Character 5">
+        <img  class="character" src="/assests/characters/1.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/4.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/5.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/6.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/4.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/5.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/6.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/1.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
         <!-- Add more character images as needed -->
       </div>
     </div>
@@ -123,7 +108,7 @@
   <section class="product-cards">
     <div class="card">
         <div class="card-image">
-            <img src="https://via.placeholder.com/300x200" alt="Game 1">
+            <img src="/assests/thumbnails/1.jpg" alt="Game 1">
             <div class="card-overlay">
                 <video src="path/to/gameplay-video1.mp4" controls></video>
             </div>
@@ -135,7 +120,7 @@
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="https://via.placeholder.com/300x200" alt="Game 2">
+            <img src="/assests/thumbnails/2.jpg" alt="Game 2">
             <div class="card-overlay">
                 <video src="path/to/gameplay-video2.mp4" controls></video>
             </div>
@@ -147,7 +132,7 @@
     </div>
     <div class="card">
       <div class="card-image">
-          <img src="https://via.placeholder.com/300x200" alt="Game 2">
+          <img src="/assests/thumbnails/12.webp" alt="Game 2">
           <div class="card-overlay">
               <video src="path/to/gameplay-video2.mp4" controls></video>
           </div>
@@ -159,7 +144,7 @@
   </div>
   <div class="card">
     <div class="card-image">
-        <img src="https://via.placeholder.com/300x200" alt="Game 2">
+        <img src="/assests/thumbnails/8.webp" alt="Game 2">
         <div class="card-overlay">
             <video src="path/to/gameplay-video2.mp4" controls></video>
         </div>
@@ -171,7 +156,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="https://via.placeholder.com/300x200" alt="Game 2">
+      <img src="/assests/thumbnails/5.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -183,7 +168,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="https://via.placeholder.com/300x200" alt="Game 2">
+      <img src="/assests/thumbnails/9.avif" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -195,7 +180,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="https://via.placeholder.com/300x200" alt="Game 2">
+      <img src="/assests/thumbnails/10.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -207,7 +192,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="https://via.placeholder.com/300x200" alt="Game 2">
+      <img src="/assests/thumbnails/11.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -284,16 +269,194 @@
         <button class="join-channel-button">Join Channel</button>
       </div>
     </div>
+    <div class="channel-card card-3">
+      <div class="channel-icon">
+        <i class="fas fa-microphone-alt"></i>
+      </div>
+      <div class="channel-info">
+        <h3>Expert Talk</h3>
+        <p>strategies from top gaming professionals.</p>
+        <button class="join-channel-button">Join Channel</button>
+      </div>
+    </div>
+    <div class="channel-card card-1">
+      <div class="channel-icon">
+        <i class="fas fa-gamepad"></i>
+      </div>
+      <div class="channel-info">
+        <h3>Influencer meet</h3>
+        <p>Meet Your Favorite Influencers.</p>
+        <button class="join-channel-button">Join Channel</button>
+      </div>
+    </div>
+    
     <!-- Add more channel cards as needed -->
   </div>
 </section>
 
+<section id="videos-section" class="videos-section">
+  <h2><i class="fa-solid fa-video"></i> &nbsp Videos</h2>
+  <div class="video-container">
+    <div class="video-item">
+      <img src="/assests/thumbnails/1.jpg" alt="Video 1">
+      <div class="overlay">
+        <h3>Video Title 1</h3>
+        <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <div class="video-item">
+      <img src="/assests/thumbnails/2.jpg" alt="Video 1">
+      <div class="overlay">
+        <h3>Video Title 1</h3>
+        <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <div class="video-item">
+      <img src="/assests/thumbnails/3.jpg" alt="Video 1">
+      <div class="overlay">
+        <h3>Video Title 1</h3>
+        <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <div class="video-item">
+      <img src="/assests/thumbnails/4.jpg" alt="Video 1">
+      <div class="overlay">
+        <h3>Video Title 1</h3>
+        <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <div class="video-item">
+      <img src="/assests/thumbnails/5.jpg" alt="Video 1">
+      <div class="overlay">
+        <h3>Video Title 1</h3>
+        <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <div class="video-item">
+      <img src="/assests/thumbnails/6.jpg" alt="Video 2">
+      <div class="overlay">
+        <h3>Video Title 2</h3>
+        <a href="video2.mp4" target="_blank" class="play-button">&#9658;</a>
+      </div>
+    </div>
+    <!-- Add more video items as needed -->
+  </div>
+  <a href="#" class="more-videos-button">More Videos &nbsp; <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
+</section>
 
 
+<section id="quiz-section" class="quiz-section">
+  <h2><i class="fa-solid fa-circle-question"></i> &nbsp Quiz</h2>
+  <div class="quiz-container">
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q1.jpg" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q2.jpg" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q3.avif" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q4.avif" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q5.png" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="quiz-item">
+      <img src="/assests/thumbnails/q1.jpg" alt="Video 1">
+      <div class="info-box">
+        <p class="quiz-category">The Amazing World of Gumball</p>
+        <h3>Totally Legit Fortune Quiz</h3>
+        <div class="quiz-icon">
+          <i class="fa-solid fa-question"></i>
+        </div>
+      </div>
+    </div>
+    <!-- Repeat for other quiz items -->
+  </div>
+  <a href="#" class="more-quiz-button">More <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
+</section>
 
 
+<footer class="footer">
+  <div class="footer-content">
+      <div class="footer-logo">
+          <a href="#"><img src="assests/Red Mascot Console Gaming Studio Logo.png" alt="Cartoon Network Logo"></a>
+      </div>
+      <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Games</a></li>
+              <li><a href="#">Videos</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
+      <div class="footer-contact">
+          <h3>Contact Us</h3>
+          <ul>
+              <li><i class="fas fa-map-marker-alt"></i> 123 Gaming Street, Game City</li>
+              <li><i class="fas fa-phone-alt"></i> +123 456 7890</li>
+              <li><i class="fas fa-envelope"></i> <a href="mailto:contact@gamingsite.com">contact@gamingsite.com</a></li>
+          </ul>
+      </div>
+      <div class="footer-social">
+          <h3>Follow Us</h3>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+  </div>
+  <div class="footer-bottom">
+      <p>&copy; 2024 Gaming Website. All Rights Reserved.</p>
+  </div>
+</footer>
 
-  <script src="script.js"></script>
+
+  <script src="/assests/script.js"></script>
 </body>
 </html>
 
