improve the css and make it more responsive

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
   
           <div class="slider-wrapper">
               <div class="game-card">
-                  <video class="gameplay" src="/assests/showcase/videos/gp-1.mp4" muted></video>
-                  <img src="/assests/showcase/pictures/p1.jpg" alt="Game 1">
+                  <video class="gameplay" src="assests/showcase/videos/gp-1.mp4" muted></video>
+                  <img src="assests/showcase/pictures/p1.jpg" alt="Game 1">
                   <!-- <div class="game-info">
                       <h3>Black Myth Wukong</h3>
                       <button class="play-now">Play Now</button>
                   </div> -->
               </div>
               <div class="game-card">
-                  <video class="gameplay" src="/assests/showcase/videos/gp-2.mp4" muted></video>
-                  <img src="/assests/showcase/pictures/2.jpg" alt="Game 2">
+                  <video class="gameplay" src="assests/showcase/videos/gp-2.mp4" muted></video>
+                  <img src="assests/showcase/pictures/2.jpg" alt="Game 2">
                   <!-- <div class="game-info">
                       <h3>Valorant</h3>
                       <button class="play-now">Play Now</button>
@@ -84,20 +84,20 @@
     <!-- <h2>Game Characters</h2> -->
     <div class="carousel-wrapper">
       <div class="carousel">
-        <img  class="character" src="/assests/characters/1.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/4.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/5.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/6.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/4.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/5.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/6.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/1.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/2.png" alt="Character 1">
-        <img  class="character" src="/assests/characters/3.png" alt="Character 1">
+        <img  class="character" src="assests/characters/1.png" alt="Character 1">
+        <img  class="character" src="assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="assests/characters/3.png" alt="Character 1">
+        <img  class="character" src="assests/characters/4.png" alt="Character 1">
+        <img  class="character" src="assests/characters/5.png" alt="Character 1">
+        <img  class="character" src="assests/characters/6.png" alt="Character 1">
+        <img  class="character" src="assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="assests/characters/3.png" alt="Character 1">
+        <img  class="character" src="assests/characters/4.png" alt="Character 1">
+        <img  class="character" src="assests/characters/5.png" alt="Character 1">
+        <img  class="character" src="assests/characters/6.png" alt="Character 1">
+        <img  class="character" src="assests/characters/1.png" alt="Character 1">
+        <img  class="character" src="assests/characters/2.png" alt="Character 1">
+        <img  class="character" src="assests/characters/3.png" alt="Character 1">
         <!-- Add more character images as needed -->
       </div>
     </div>
@@ -108,7 +108,7 @@
   <section class="product-cards">
     <div class="card">
         <div class="card-image">
-            <img src="/assests/thumbnails/1.jpg" alt="Game 1">
+            <img src="assests/thumbnails/1.jpg" alt="Game 1">
             <div class="card-overlay">
                 <video src="path/to/gameplay-video1.mp4" controls></video>
             </div>
@@ -120,7 +120,7 @@
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="/assests/thumbnails/2.jpg" alt="Game 2">
+            <img src="assests/thumbnails/2.jpg" alt="Game 2">
             <div class="card-overlay">
                 <video src="path/to/gameplay-video2.mp4" controls></video>
             </div>
@@ -132,7 +132,7 @@
     </div>
     <div class="card">
       <div class="card-image">
-          <img src="/assests/thumbnails/12.webp" alt="Game 2">
+          <img src="assests/thumbnails/12.webp" alt="Game 2">
           <div class="card-overlay">
               <video src="path/to/gameplay-video2.mp4" controls></video>
           </div>
@@ -144,7 +144,7 @@
   </div>
   <div class="card">
     <div class="card-image">
-        <img src="/assests/thumbnails/8.webp" alt="Game 2">
+        <img src="assests/thumbnails/8.webp" alt="Game 2">
         <div class="card-overlay">
             <video src="path/to/gameplay-video2.mp4" controls></video>
         </div>
@@ -156,7 +156,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="/assests/thumbnails/5.jpg" alt="Game 2">
+      <img src="assests/thumbnails/5.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -168,7 +168,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="/assests/thumbnails/9.avif" alt="Game 2">
+      <img src="assests/thumbnails/9.avif" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -180,7 +180,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="/assests/thumbnails/10.jpg" alt="Game 2">
+      <img src="assests/thumbnails/10.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -192,7 +192,7 @@
 </div>
 <div class="card">
   <div class="card-image">
-      <img src="/assests/thumbnails/11.jpg" alt="Game 2">
+      <img src="assests/thumbnails/11.jpg" alt="Game 2">
       <div class="card-overlay">
           <video src="path/to/gameplay-video2.mp4" controls></video>
       </div>
@@ -298,42 +298,42 @@
   <h2><i class="fa-solid fa-video"></i> &nbsp Videos</h2>
   <div class="video-container">
     <div class="video-item">
-      <img src="/assests/thumbnails/1.jpg" alt="Video 1">
+      <img src="assests/thumbnails/1.jpg" alt="Video 1">
       <div class="overlay">
         <h3>Video Title 1</h3>
         <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
       </div>
     </div>
     <div class="video-item">
-      <img src="/assests/thumbnails/2.jpg" alt="Video 1">
+      <img src="assests/thumbnails/2.jpg" alt="Video 1">
       <div class="overlay">
         <h3>Video Title 1</h3>
         <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
       </div>
     </div>
     <div class="video-item">
-      <img src="/assests/thumbnails/3.jpg" alt="Video 1">
+      <img src="assests/thumbnails/3.jpg" alt="Video 1">
       <div class="overlay">
         <h3>Video Title 1</h3>
         <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
       </div>
     </div>
     <div class="video-item">
-      <img src="/assests/thumbnails/4.jpg" alt="Video 1">
+      <img src="assests/thumbnails/4.jpg" alt="Video 1">
       <div class="overlay">
         <h3>Video Title 1</h3>
         <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
       </div>
     </div>
     <div class="video-item">
-      <img src="/assests/thumbnails/5.jpg" alt="Video 1">
+      <img src="assests/thumbnails/5.jpg" alt="Video 1">
       <div class="overlay">
         <h3>Video Title 1</h3>
         <a href="video1.mp4" target="_blank" class="play-button">&#9658;</a>
       </div>
     </div>
     <div class="video-item">
-      <img src="/assests/thumbnails/6.jpg" alt="Video 2">
+      <img src="assests/thumbnails/6.jpg" alt="Video 2">
       <div class="overlay">
         <h3>Video Title 2</h3>
         <a href="video2.mp4" target="_blank" class="play-button">&#9658;</a>
@@ -349,7 +349,7 @@
   <h2><i class="fa-solid fa-circle-question"></i> &nbsp Quiz</h2>
   <div class="quiz-container">
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q1.jpg" alt="Video 1">
+      <img src="assests/thumbnails/q1.jpg" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -360,7 +360,7 @@
     </div>
 
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q2.jpg" alt="Video 1">
+      <img src="assests/thumbnails/q2.jpg" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -371,7 +371,7 @@
     </div>
 
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q3.avif" alt="Video 1">
+      <img src="assests/thumbnails/q3.avif" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -382,7 +382,7 @@
     </div>
 
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q4.avif" alt="Video 1">
+      <img src="assests/thumbnails/q4.avif" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -393,7 +393,7 @@
     </div>
 
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q5.png" alt="Video 1">
+      <img src="assests/thumbnails/q5.png" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -404,7 +404,7 @@
     </div>
 
     <div class="quiz-item">
-      <img src="/assests/thumbnails/q1.jpg" alt="Video 1">
+      <img src="assests/thumbnails/q1.jpg" alt="Video 1">
       <div class="info-box">
         <p class="quiz-category">The Amazing World of Gumball</p>
         <h3>Totally Legit Fortune Quiz</h3>
@@ -434,6 +434,8 @@
               <li><a href="#">Contact</a></li>
           </ul>
       </div>
+
+
       <div class="footer-contact">
           <h3>Contact Us</h3>
           <ul>
@@ -449,14 +451,19 @@
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
+      <div class="footer-feedback">
+        <a href="/feedback.html" class="feedback-button">Give Feedback</a>
+    </div>
   </div>
   <div class="footer-bottom">
       <p>&copy; 2024 Gaming Website. All Rights Reserved.</p>
   </div>
+
+
 </footer>
 
 
-  <script src="/assests/script.js"></script>
+  <script src="assests/script.js"></script>
 </body>
 </html>
 
