--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
 
     <div class="leaderboard">
-        <h2><i class="fas fa-trophy"></i> Top Players</h2>
+        <h2><i class="fas fa-trophy"></i>Top Players</h2>
         <ul>
             <li><i class="fas fa-medal icon"></i><span class="name">Jivansh</span><span class="points">100000 pts</span></li>
             <li><i class="fas fa-medal icon"></i><span class="name">Aryan</span><span class="points">99999 pts</span></li>
@@ -121,7 +121,7 @@
             </div> -->
         </div>
         <div class="card-content">
-            <h3>Game Title 1</h3>
+            <h3>Wukong</h3>
             <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
@@ -133,7 +133,7 @@
             </div> -->
         </div>
         <div class="card-content">
-            <h3>Game Title 2</h3>
+            <h3>Fall Guys</h3>
             <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
@@ -145,7 +145,7 @@
           </div> -->
       </div>
       <div class="card-content">
-          <h3>Game Title 3</h3>
+          <h3>Uncharted</h3>
           <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
   </div>
@@ -157,7 +157,7 @@
         </div> -->
     </div>
     <div class="card-content">
-        <h3>Game Title 4</h3>
+        <h3>Gta 5</h3>
         <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
 </div>
@@ -169,7 +169,7 @@
       </div> -->
   </div>
   <div class="card-content">
-      <h3>Game Title 5</h3>
+      <h3>Gta 6</h3>
       <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
 </div>
@@ -181,7 +181,7 @@
       </div> -->
   </div>
   <div class="card-content">
-      <h3>Game Title 7</h3>
+      <h3>Warzone</h3>
       <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
 </div>
@@ -193,7 +193,7 @@
       </div> -->
   </div>
   <div class="card-content">
-      <h3>Game Title 2</h3>
+      <h3>Battlefield</h3>
       <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
 </div>
@@ -205,7 +205,7 @@
       </div> -->
   </div>
   <div class="card-content">
-      <h3>Game Title 8</h3>
+      <h3>The last of us 2</h3>
       <p>Short description of the game. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
 </div>
